--- a/First Project/Full Project/Neural_Networks_Project_1.ipynb
+++ b/First Project/Full Project/Neural_Networks_Project_1.ipynb
@@ -29,8 +29,6 @@
         "3. Convolutional Neural Network (CNN) - Multiple Configurations\n",
         "4. Comprehensive Comparison & Analysis\n",
         "\n",
-        "Author: Your Name\n",
-        "Date: November 2024\n",
         "\n",
         "\n"
       ],
@@ -41,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Libraries**"
+        "# **LIBRARIES**"
       ],
       "metadata": {
         "id": "PbQIye0Uk72z"
@@ -125,7 +123,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Save in Google Drive**"
+        "# **SAVE IN GOOGLE DRIVE**"
       ],
       "metadata": {
         "id": "BChketSmzZtd"
@@ -720,7 +718,7 @@
         "        'test_results': test_results\n",
         "    }\n",
         "\n",
-        "    print(f\"✅ Test Accuracy: {test_results['accuracy']:.2f}%\")\n",
+        "    print(f\"Test Accuracy: {test_results['accuracy']:.2f}%\")\n",
         "\n",
         "    # Save model\n",
         "    torch.save(model.state_dict(), f\"{SAVE_PATH}/{exp_name}_model.pth\")\n",
@@ -1399,7 +1397,7 @@
         "print(f\"• Total Training Time: {sum([r['training_time'] for r in all_results.values()]):.1f}s\")\n",
         "\n",
         "if current_best >= 90:\n",
-        "    print(f\"\\nTARGET ACHIEVED: {current_best:.2f}% ≥ 90% ✅\")\n",
+        "    print(f\"\\nTARGET ACHIEVED: {current_best:.2f}% ≥ 90%\")\n",
         "else:\n",
         "    print(f\"\\nTARGET: {current_best:.2f}% / 90% ({90-current_best:.2f}% remaining)\")"
       ],
